// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MenuItem /> renders highlighted 1`] = `
<li
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <ButtonOrLink
    aria-expanded={false}
    aria-haspopup={false}
    className="f53v9zt"
    role="menuitem"
    tabIndex={-1}
  >
    Foo
  </ButtonOrLink>
</li>
`;

exports[`<MenuItem /> renders spacious 1`] = `
<li
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  role="none"
>
  <ButtonOrLink
    aria-expanded={false}
    aria-haspopup={false}
    className="f16v3qra"
    role="menuitem"
    tabIndex={-1}
  >
    Foo
  </ButtonOrLink>
</li>
`;
